--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,12 @@
 
 :root {
   --text-color: #124a63;
-  --text-secondary: #b3c5cd;
+  --text-color-secondary: #b3c5cd;
   --primary-color: #21b6b7;
 
   --background-color: #f9f9f9;
-  --background-color-light: #eef3f6;
-  --background-color-dark: white;
+  --background-color-dark: #eef3f6;
+  --background-color-light: white;
 
   --font-family: "Poppins", sans-serif;
   --box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
