--- a/src/component/Layout/Layout.module.css
+++ b/src/component/Layout/Layout.module.css
@@ -4,6 +4,9 @@
 
   display: grid;
   grid-template-rows: auto 1fr auto;
+
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .header {
@@ -11,6 +14,10 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 32px;
+}
+
+.header_link {
+  font-size: 5px !important;
 }
 
 .footer {
